parser/predikit_parser.go
// Code generated from Predikit.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Predikit
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PredikitParser struct {
	*antlr.BaseParser
}

var PredikitParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func predikitParserInit() {
	staticData := &PredikitParserStaticData
	staticData.LiteralNames = []string{
		"", "'all'", "'any'", "'none'", "'test'", "'not'", "'tool'", "'@'",
		"':'", "'$'", "'{'", "'}'", "'('", "')'", "'true'", "'false'", "'='",
		"'!='", "'=~'", "'>'", "'>='", "'<'", "'<='",
	}
	staticData.SymbolicNames = []string{
		"", "PK_ALL", "PK_ANY", "PK_NONE", "PK_TEST", "PK_NOT", "PK_TOOL", "PK_RETRYING",
		"PK_COLON", "PK_DOLLAR", "PK_LCURLY", "PK_RCURLY", "PK_LPAREN", "PK_RPAREN",
		"PK_TRUE", "PK_FALSE", "PK_CMP_EQ", "PK_CMP_NEQ", "PK_CMP_RE", "PK_CMP_GT",
		"PK_CMP_GTE", "PK_CMP_LT", "PK_CMP_LTE", "PK_FN_LIT", "PK_STRING_LIT",
		"PK_ID", "PK_TYPENAME", "PK_INT", "LINE_COMMENT", "COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"pk_toplevel", "pk_toplevel_child", "pk_group", "pk_group_child", "pk_group_agg",
		"pk_test", "pk_tool", "pk_tool_child", "pk_tool_metaparam", "pk_actual_param",
		"pk_actual_param_value", "pk_tool_actual_param", "pk_tool_actual_param_value",
		"pk_conversion_fn", "pk_bool",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PredikitParserInit initializes any static state used to implement PredikitParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPredikitParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PredikitParserInit() {
	staticData := &PredikitParserStaticData
	staticData.once.Do(predikitParserInit)
}

// NewPredikitParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPredikitParser(input antlr.TokenStream) *PredikitParser {
	PredikitParserInit()
	this := new(PredikitParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PredikitParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Predikit.g4"

	return this
}

// PredikitParser tokens.
const (
	PredikitParserEOF           = antlr.TokenEOF
	PredikitParserPK_ALL        = 1
	PredikitParserPK_ANY        = 2
	PredikitParserPK_NONE       = 3
	PredikitParserPK_TEST       = 4
	PredikitParserPK_NOT        = 5
	PredikitParserPK_TOOL       = 6
	PredikitParserPK_RETRYING   = 7
	PredikitParserPK_COLON      = 8
	PredikitParserPK_DOLLAR     = 9
	PredikitParserPK_LCURLY     = 10
	PredikitParserPK_RCURLY     = 11
	PredikitParserPK_LPAREN     = 12
	PredikitParserPK_RPAREN     = 13
	PredikitParserPK_TRUE       = 14
	PredikitParserPK_FALSE      = 15
	PredikitParserPK_CMP_EQ     = 16
	PredikitParserPK_CMP_NEQ    = 17
	PredikitParserPK_CMP_RE     = 18
	PredikitParserPK_CMP_GT     = 19
	PredikitParserPK_CMP_GTE    = 20
	PredikitParserPK_CMP_LT     = 21
	PredikitParserPK_CMP_LTE    = 22
	PredikitParserPK_FN_LIT     = 23
	PredikitParserPK_STRING_LIT = 24
	PredikitParserPK_ID         = 25
	PredikitParserPK_TYPENAME   = 26
	PredikitParserPK_INT        = 27
	PredikitParserLINE_COMMENT  = 28
	PredikitParserCOMMENT       = 29
	PredikitParserWS            = 30
)

// PredikitParser rules.
const (
	PredikitParserRULE_pk_toplevel                = 0
	PredikitParserRULE_pk_toplevel_child          = 1
	PredikitParserRULE_pk_group                   = 2
	PredikitParserRULE_pk_group_child             = 3
	PredikitParserRULE_pk_group_agg               = 4
	PredikitParserRULE_pk_test                    = 5
	PredikitParserRULE_pk_tool                    = 6
	PredikitParserRULE_pk_tool_child              = 7
	PredikitParserRULE_pk_tool_metaparam          = 8
	PredikitParserRULE_pk_actual_param            = 9
	PredikitParserRULE_pk_actual_param_value      = 10
	PredikitParserRULE_pk_tool_actual_param       = 11
	PredikitParserRULE_pk_tool_actual_param_value = 12
	PredikitParserRULE_pk_conversion_fn           = 13
	PredikitParserRULE_pk_bool                    = 14
)

// IPk_toplevelContext is an interface to support dynamic dispatch.
type IPk_toplevelContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_pk_toplevel_child returns the _pk_toplevel_child rule contexts.
	Get_pk_toplevel_child() IPk_toplevel_childContext

	// Set_pk_toplevel_child sets the _pk_toplevel_child rule contexts.
	Set_pk_toplevel_child(IPk_toplevel_childContext)

	// GetKids returns the kids rule context list.
	GetKids() []IPk_toplevel_childContext

	// SetKids sets the kids rule context list.
	SetKids([]IPk_toplevel_childContext)

	// Getter signatures
	AllPk_toplevel_child() []IPk_toplevel_childContext
	Pk_toplevel_child(i int) IPk_toplevel_childContext

	// IsPk_toplevelContext differentiates from other interfaces.
	IsPk_toplevelContext()
}

type Pk_toplevelContext struct {
	antlr.BaseParserRuleContext
	parser             antlr.Parser
	_pk_toplevel_child IPk_toplevel_childContext
	kids               []IPk_toplevel_childContext
}

func NewEmptyPk_toplevelContext() *Pk_toplevelContext {
	var p = new(Pk_toplevelContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_toplevel
	return p
}

func InitEmptyPk_toplevelContext(p *Pk_toplevelContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_toplevel
}

func (*Pk_toplevelContext) IsPk_toplevelContext() {}

func NewPk_toplevelContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Pk_toplevelContext {
	var p = new(Pk_toplevelContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredikitParserRULE_pk_toplevel

	return p
}

func (s *Pk_toplevelContext) GetParser() antlr.Parser { return s.parser }

func (s *Pk_toplevelContext) Get_pk_toplevel_child() IPk_toplevel_childContext {
	return s._pk_toplevel_child
}

func (s *Pk_toplevelContext) Set_pk_toplevel_child(v IPk_toplevel_childContext) {
	s._pk_toplevel_child = v
}

func (s *Pk_toplevelContext) GetKids() []IPk_toplevel_childContext { return s.kids }

func (s *Pk_toplevelContext) SetKids(v []IPk_toplevel_childContext) { s.kids = v }

func (s *Pk_toplevelContext) AllPk_toplevel_child() []IPk_toplevel_childContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPk_toplevel_childContext); ok {
			len++
		}
	}

	tst := make([]IPk_toplevel_childContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPk_toplevel_childContext); ok {
			tst[i] = t.(IPk_toplevel_childContext)
			i++
		}
	}

	return tst
}

func (s *Pk_toplevelContext) Pk_toplevel_child(i int) IPk_toplevel_childContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_toplevel_childContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_toplevel_childContext)
}

func (s *Pk_toplevelContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Pk_toplevelContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Pk_toplevelContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.EnterPk_toplevel(s)
	}
}

func (s *Pk_toplevelContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.ExitPk_toplevel(s)
	}
}

func (p *PredikitParser) Pk_toplevel() (localctx IPk_toplevelContext) {
	localctx = NewPk_toplevelContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PredikitParserRULE_pk_toplevel)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(31)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&222) != 0) {
		{
			p.SetState(30)

			var _x = p.Pk_toplevel_child()

			localctx.(*Pk_toplevelContext)._pk_toplevel_child = _x
		}
		localctx.(*Pk_toplevelContext).kids = append(localctx.(*Pk_toplevelContext).kids, localctx.(*Pk_toplevelContext)._pk_toplevel_child)

		p.SetState(33)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPk_toplevel_childContext is an interface to support dynamic dispatch.
type IPk_toplevel_childContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetGroup returns the group rule contexts.
	GetGroup() IPk_groupContext

	// GetTest returns the test rule contexts.
	GetTest() IPk_testContext

	// GetTool returns the tool rule contexts.
	GetTool() IPk_toolContext

	// SetGroup sets the group rule contexts.
	SetGroup(IPk_groupContext)

	// SetTest sets the test rule contexts.
	SetTest(IPk_testContext)

	// SetTool sets the tool rule contexts.
	SetTool(IPk_toolContext)

	// Getter signatures
	Pk_group() IPk_groupContext
	Pk_test() IPk_testContext
	Pk_tool() IPk_toolContext

	// IsPk_toplevel_childContext differentiates from other interfaces.
	IsPk_toplevel_childContext()
}

type Pk_toplevel_childContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	group  IPk_groupContext
	test   IPk_testContext
	tool   IPk_toolContext
}

func NewEmptyPk_toplevel_childContext() *Pk_toplevel_childContext {
	var p = new(Pk_toplevel_childContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_toplevel_child
	return p
}

func InitEmptyPk_toplevel_childContext(p *Pk_toplevel_childContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_toplevel_child
}

func (*Pk_toplevel_childContext) IsPk_toplevel_childContext() {}

func NewPk_toplevel_childContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Pk_toplevel_childContext {
	var p = new(Pk_toplevel_childContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredikitParserRULE_pk_toplevel_child

	return p
}

func (s *Pk_toplevel_childContext) GetParser() antlr.Parser { return s.parser }

func (s *Pk_toplevel_childContext) GetGroup() IPk_groupContext { return s.group }

func (s *Pk_toplevel_childContext) GetTest() IPk_testContext { return s.test }

func (s *Pk_toplevel_childContext) GetTool() IPk_toolContext { return s.tool }

func (s *Pk_toplevel_childContext) SetGroup(v IPk_groupContext) { s.group = v }

func (s *Pk_toplevel_childContext) SetTest(v IPk_testContext) { s.test = v }

func (s *Pk_toplevel_childContext) SetTool(v IPk_toolContext) { s.tool = v }

func (s *Pk_toplevel_childContext) Pk_group() IPk_groupContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_groupContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_groupContext)
}

func (s *Pk_toplevel_childContext) Pk_test() IPk_testContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_testContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_testContext)
}

func (s *Pk_toplevel_childContext) Pk_tool() IPk_toolContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_toolContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_toolContext)
}

func (s *Pk_toplevel_childContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Pk_toplevel_childContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Pk_toplevel_childContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.EnterPk_toplevel_child(s)
	}
}

func (s *Pk_toplevel_childContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.ExitPk_toplevel_child(s)
	}
}

func (p *PredikitParser) Pk_toplevel_child() (localctx IPk_toplevel_childContext) {
	localctx = NewPk_toplevel_childContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PredikitParserRULE_pk_toplevel_child)
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PredikitParserPK_ALL, PredikitParserPK_ANY, PredikitParserPK_NONE:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(35)

			var _x = p.Pk_group()

			localctx.(*Pk_toplevel_childContext).group = _x
		}

	case PredikitParserPK_TEST, PredikitParserPK_RETRYING:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(36)

			var _x = p.Pk_test()

			localctx.(*Pk_toplevel_childContext).test = _x
		}

	case PredikitParserPK_TOOL:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(37)

			var _x = p.Pk_tool()

			localctx.(*Pk_toplevel_childContext).tool = _x
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPk_groupContext is an interface to support dynamic dispatch.
type IPk_groupContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetAgg_fn returns the agg_fn rule contexts.
	GetAgg_fn() IPk_group_aggContext

	// Get_pk_group_child returns the _pk_group_child rule contexts.
	Get_pk_group_child() IPk_group_childContext

	// SetAgg_fn sets the agg_fn rule contexts.
	SetAgg_fn(IPk_group_aggContext)

	// Set_pk_group_child sets the _pk_group_child rule contexts.
	Set_pk_group_child(IPk_group_childContext)

	// GetGroup_children returns the group_children rule context list.
	GetGroup_children() []IPk_group_childContext

	// SetGroup_children sets the group_children rule context list.
	SetGroup_children([]IPk_group_childContext)

	// Getter signatures
	PK_LCURLY() antlr.TerminalNode
	PK_RCURLY() antlr.TerminalNode
	Pk_group_agg() IPk_group_aggContext
	AllPk_group_child() []IPk_group_childContext
	Pk_group_child(i int) IPk_group_childContext

	// IsPk_groupContext differentiates from other interfaces.
	IsPk_groupContext()
}

type Pk_groupContext struct {
	antlr.BaseParserRuleContext
	parser          antlr.Parser
	agg_fn          IPk_group_aggContext
	_pk_group_child IPk_group_childContext
	group_children  []IPk_group_childContext
}

func NewEmptyPk_groupContext() *Pk_groupContext {
	var p = new(Pk_groupContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_group
	return p
}

func InitEmptyPk_groupContext(p *Pk_groupContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_group
}

func (*Pk_groupContext) IsPk_groupContext() {}

func NewPk_groupContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Pk_groupContext {
	var p = new(Pk_groupContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredikitParserRULE_pk_group

	return p
}

func (s *Pk_groupContext) GetParser() antlr.Parser { return s.parser }

func (s *Pk_groupContext) GetAgg_fn() IPk_group_aggContext { return s.agg_fn }

func (s *Pk_groupContext) Get_pk_group_child() IPk_group_childContext { return s._pk_group_child }

func (s *Pk_groupContext) SetAgg_fn(v IPk_group_aggContext) { s.agg_fn = v }

func (s *Pk_groupContext) Set_pk_group_child(v IPk_group_childContext) { s._pk_group_child = v }

func (s *Pk_groupContext) GetGroup_children() []IPk_group_childContext { return s.group_children }

func (s *Pk_groupContext) SetGroup_children(v []IPk_group_childContext) { s.group_children = v }

func (s *Pk_groupContext) PK_LCURLY() antlr.TerminalNode {
	return s.GetToken(PredikitParserPK_LCURLY, 0)
}

func (s *Pk_groupContext) PK_RCURLY() antlr.TerminalNode {
	return s.GetToken(PredikitParserPK_RCURLY, 0)
}

func (s *Pk_groupContext) Pk_group_agg() IPk_group_aggContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_group_aggContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_group_aggContext)
}

func (s *Pk_groupContext) AllPk_group_child() []IPk_group_childContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPk_group_childContext); ok {
			len++
		}
	}

	tst := make([]IPk_group_childContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPk_group_childContext); ok {
			tst[i] = t.(IPk_group_childContext)
			i++
		}
	}

	return tst
}

func (s *Pk_groupContext) Pk_group_child(i int) IPk_group_childContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_group_childContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_group_childContext)
}

func (s *Pk_groupContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Pk_groupContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Pk_groupContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.EnterPk_group(s)
	}
}

func (s *Pk_groupContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.ExitPk_group(s)
	}
}

func (p *PredikitParser) Pk_group() (localctx IPk_groupContext) {
	localctx = NewPk_groupContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PredikitParserRULE_pk_group)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)

		var _x = p.Pk_group_agg()

		localctx.(*Pk_groupContext).agg_fn = _x
	}
	{
		p.SetState(41)
		p.Match(PredikitParserPK_LCURLY)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(43)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&33554590) != 0) {
		{
			p.SetState(42)

			var _x = p.Pk_group_child()

			localctx.(*Pk_groupContext)._pk_group_child = _x
		}
		localctx.(*Pk_groupContext).group_children = append(localctx.(*Pk_groupContext).group_children, localctx.(*Pk_groupContext)._pk_group_child)

		p.SetState(45)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(47)
		p.Match(PredikitParserPK_RCURLY)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPk_group_childContext is an interface to support dynamic dispatch.
type IPk_group_childContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetTest returns the test rule contexts.
	GetTest() IPk_testContext

	// GetGroup returns the group rule contexts.
	GetGroup() IPk_groupContext

	// GetActual_param returns the actual_param rule contexts.
	GetActual_param() IPk_actual_paramContext

	// SetTest sets the test rule contexts.
	SetTest(IPk_testContext)

	// SetGroup sets the group rule contexts.
	SetGroup(IPk_groupContext)

	// SetActual_param sets the actual_param rule contexts.
	SetActual_param(IPk_actual_paramContext)

	// Getter signatures
	Pk_test() IPk_testContext
	Pk_group() IPk_groupContext
	Pk_actual_param() IPk_actual_paramContext

	// IsPk_group_childContext differentiates from other interfaces.
	IsPk_group_childContext()
}

type Pk_group_childContext struct {
	antlr.BaseParserRuleContext
	parser       antlr.Parser
	test         IPk_testContext
	group        IPk_groupContext
	actual_param IPk_actual_paramContext
}

func NewEmptyPk_group_childContext() *Pk_group_childContext {
	var p = new(Pk_group_childContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_group_child
	return p
}

func InitEmptyPk_group_childContext(p *Pk_group_childContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PredikitParserRULE_pk_group_child
}

func (*Pk_group_childContext) IsPk_group_childContext() {}

func NewPk_group_childContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Pk_group_childContext {
	var p = new(Pk_group_childContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredikitParserRULE_pk_group_child

	return p
}

func (s *Pk_group_childContext) GetParser() antlr.Parser { return s.parser }

func (s *Pk_group_childContext) GetTest() IPk_testContext { return s.test }

func (s *Pk_group_childContext) GetGroup() IPk_groupContext { return s.group }

func (s *Pk_group_childContext) GetActual_param() IPk_actual_paramContext { return s.actual_param }

func (s *Pk_group_childContext) SetTest(v IPk_testContext) { s.test = v }

func (s *Pk_group_childContext) SetGroup(v IPk_groupContext) { s.group = v }

func (s *Pk_group_childContext) SetActual_param(v IPk_actual_paramContext) { s.actual_param = v }

func (s *Pk_group_childContext) Pk_test() IPk_testContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_testContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_testContext)
}

func (s *Pk_group_childContext) Pk_group() IPk_groupContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_groupContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_groupContext)
}

func (s *Pk_group_childContext) Pk_actual_param() IPk_actual_paramContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPk_actual_paramContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPk_actual_paramContext)
}

func (s *Pk_group_childContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Pk_group_childContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Pk_group_childContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.EnterPk_group_child(s)
	}
}

func (s *Pk_group_childContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredikitListener); ok {
		listenerT.ExitPk_group_child(s)
	}
}

func (p *PredikitParser) Pk_group_child() (localctx IPk_group_childContext) {
	localctx = NewPk_group_childContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PredikitParserRULE_pk_group_child)
	p.SetState(52)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PredikitParserPK_TEST, PredikitParserPK_RETRYING:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(49)

			var _x = p.Pk_test()

			localctx.(*Pk_group_childContext).test = _x
		}

	case PredikitParserPK_ALL, PredikitParserPK_ANY, PredikitParserPK_NONE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(50)

			var _x = p.Pk_group()

			localctx.(*Pk_group_childContext).group = _x
		}

	case PredikitParserPK_ID:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(51)

			var _x = p.Pk_actual_param()

			localctx.(*Pk_group_childContext).actual_param = _x
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}
